--- a/public/templates/partials/progress-bar.jade
+++ b/public/templates/partials/progress-bar.jade
@@ -35,15 +35,15 @@
               path#path3(d='m 49.23247,33.97431 c 9.38461,0 16.98511,-7.6073 16.98511,-16.99056 C 66.21758,7.6005 58.61572,0 49.23247,0 39.84921,0 32.24871,7.60187 32.24871,16.98375 c -0.001,9.38462 7.6005,16.99056 16.98376,16.99056 z m 35.96663,1.03427 c 6.08176,0 11.01086,-4.9291 11.01086,-11.00406 0,-6.07087 -4.9291,-10.99997 -11.01086,-10.99997 -6.06952,0 -10.99862,4.9291 -10.99862,10.99997 -0.001,6.07496 4.9291,11.00406 10.99862,11.00406 z m 0,2.28083 c -8.07681,0 -14.63352,6.48594 -14.77641,14.51512 -3.38314,-8.38573 -11.58107,-14.3246 -21.18886,-14.3246 -8.56401,0 -16.02161,4.72769 -19.93142,11.69946 C 27.96059,42.39814 21.97273,37.29077 14.79954,37.29077 6.62883,37.29077 0,43.90599 0,52.06582 v 8.74227 H 26.39422 V 73.81536 H 72.08704 V 60.80809 H 100 V 52.06582 C 99.999,43.90463 93.3698,37.28941 85.1991,37.28941 z M 14.79818,35.00858 c 6.07088,0 10.99861,-4.9291 10.99861,-11.00406 0,-6.07087 -4.92773,-10.99997 -10.99861,-10.99997 -6.06951,0 -10.99861,4.9291 -10.99861,10.99997 0,6.07496 4.9291,11.00406 10.99861,11.00406 z', style='fill:#000000;fill-opacity:1')
           div
             p 3-5 team members
-        .col-md-2.col-sm-2.col-xs-2.text-center(ng-class="status.payment_status ? 'item-done' : 'item-pending'")                   
-          div
-            .progress-ind
-              img.indicator(ng-src='images/disprove-member-red.svg', ng-hide='status.payment_status')
-              img.indicator(ng-src='images/approve-member-green.svg', ng-show='status.payment_status')
-            svg.svg-images(preserveaspectratio='xMinYMin meet', viewbox='0 0 100 61.085')
-              path#payment(d='M 56.073021,51.623843 H 86.99675 v -5.34225 h 2.976885 V 14.995612 H 86.99675 V 9.7035705 H 56.073021 c 7.062031,2.9589475 12.147844,11.2135315 12.147844,20.9565545 0,9.748395 -5.084021,18.001177 -12.147844,20.963718 z m -43.184542,0 H 44.681958 C 37.619927,48.663093 32.535906,40.40852 32.535906,30.658322 c 0,-9.743012 5.084021,-17.995804 12.146052,-20.9565431 H 12.888479 v 5.4695731 h -2.865708 v 31.110241 h 2.865708 v 5.34225 z M 0,0 V 61.085312 H 100 V 58.219614 0 H 0 z M 94.286531,55.371843 H 5.7116771 V 5.7116743 H 94.286531 V 55.371843 z', style='fill:#000000;fill-opacity:1')
-          div
-            p Make payment
+        //.col-md-2.col-sm-2.col-xs-2.text-center(ng-class="status.payment_status ? 'item-done' : 'item-pending'")                   
+          //div
+            //.progress-ind
+              //img.indicator(ng-src='images/disprove-member-red.svg', ng-hide='status.payment_status')
+             // img.indicator(ng-src='images/approve-member-green.svg', ng-show='status.payment_status')
+            //svg.svg-images(preserveaspectratio='xMinYMin meet', viewbox='0 0 100 61.085')
+              //path#payment(d='M 56.073021,51.623843 H 86.99675 v -5.34225 h 2.976885 V 14.995612 H 86.99675 V 9.7035705 H 56.073021 c 7.062031,2.9589475 12.147844,11.2135315 12.147844,20.9565545 0,9.748395 -5.084021,18.001177 -12.147844,20.963718 z m -43.184542,0 H 44.681958 C 37.619927,48.663093 32.535906,40.40852 32.535906,30.658322 c 0,-9.743012 5.084021,-17.995804 12.146052,-20.9565431 H 12.888479 v 5.4695731 h -2.865708 v 31.110241 h 2.865708 v 5.34225 z M 0,0 V 61.085312 H 100 V 58.219614 0 H 0 z M 94.286531,55.371843 H 5.7116771 V 5.7116743 H 94.286531 V 55.371843 z', style='fill:#000000;fill-opacity:1')
+          //div
+           // p Make payment
         .col-md-2.col-sm-2.col-xs-2.text-center(ng-class="ready ? 'item-done' : 'item-pending'")                    
           div
             .progress-ind
