--- a/public/templates/teams.jade
+++ b/public/templates/teams.jade
@@ -43,11 +43,35 @@ modal-dialog(show='modalShown', dialog-title='Team Members', height='auto', widt
           h5.modalMemberName {{member._id.profile.name}}
         
         
-modal-dialog(show='createModalShown', dialog-title='Create a Team', height='175px', width='400px')
+modal-dialog(show='createModalShown', dialog-title='Create a Team', height='auto', width='400px')
   div.createTeamModal
-    h3 No team yet?? Create one NOW!
+    h3 No team yet?? 
+    br
+    h3 Create one NOW!
     .row
-      .col-md-9
+      .col-md-12
         input.form-control(type='text', placeholder='Enter new team name...' ng-model='teamName')
-      .col-md-2
-        button.btn.btn-md.createTeamButton(ng-click='createTeam(teamName)') Create!
+    .row
+      .col-md-3
+        label.fonz
+          input(type='radio', ng-model='className', value='fonz')
+          |   
+          img(src='https://s3-us-west-2.amazonaws.com/codejedi/events/goa-hack/goa-hackteam-image')
+      .col-md-3
+        label.fonz
+          input(type='radio', ng-model='className', value='jack')
+          |   
+          img(src='https://s3-us-west-2.amazonaws.com/codejedi/events/goa-hack/goa-hackteam-image')
+      .col-md-3
+        label.fonz
+          input(type='radio', ng-model='className', value='frost')
+          |   
+          img(src='https://s3-us-west-2.amazonaws.com/codejedi/events/goa-hack/goa-hackteam-image')
+      .col-md-3
+        label.fonz
+          input(type='radio', ng-model='className', value='byte')
+          |   
+          img(src='https://s3-us-west-2.amazonaws.com/codejedi/events/goa-hack/goa-hackteam-image')
+    .row
+      .col-md-12
+        button.btn.btn-md.createTeamButton(ng-click='createTeam(teamName, className)') Create!
