--- a/public/templates/home.jade
+++ b/public/templates/home.jade
@@ -16,7 +16,7 @@ section#schedule
   .container
     .row
       .col-lg-12.text-center
-        h2.section-heading GoaHack
+        h2.section-heading Drupal Hack
         h3.section-subheading.text-muted India's Largest Hackathon.
     .row
       .col-md-12
