--- a/public/templates/updateProfile.jade
+++ b/public/templates/updateProfile.jade
@@ -5,12 +5,7 @@ include partials/progress-bar.jade
     img.col-md-4.updateProfileDisplayPic(ng-src='{{user.profile.picture}}')
     br
     .col-md-12.fileSelectButton
-      input#chooseFilesButtons(type='file', nv-file-select="", uploader="uploader")
-      //
-        button(ng-file-select='', ng-model='files', multiple='true') Attach Any File
-          .drop-box(ng-file-drop='', ng-model='files', drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}", accept='image/*')
-            | Drop Images or PDFs files here
-          div(ng-no-file-drop='') File Farg/Drop is not supported for this browser
+      input.custom-file-input(type='file', nv-file-select="", uploader="uploader")
   br
   .row.second.user_details_container
     h4 User Details
