--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -898,7 +898,7 @@ section#contact {
   border-color: #000;
 }
 
-.createTeamModal, .createTeamModal h3, h4
+.createTeamModal, .createTeamModal h3, .createTeamModal h4
 {
   text-align: center;
 }
