--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -320,11 +320,18 @@ header {
   text-align: center;
   color: $white;
   background-attachment: scroll;
-  background-image: url(../images/header-bg.jpg);
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/header-bg.jpg');
   background-position: center center;
   background-repeat: none;
   background-size: cover;
+  .overlay {
+    background-color: #000;
+    opacity: 0.5;
+  }
   .intro-text {
+    img {
+      width: 150px;
+    }
     padding-top: 100px;
     padding-bottom: 50px;
     .intro-lead-in {
