--- a/public/templates/signup.jade
+++ b/public/templates/signup.jade
@@ -18,6 +18,9 @@
               div(ng-message='unique')
                 span.ion-looping
                 | Email is already taken.
+          .form-group.has-feedback
+            input.form-control.input-lg(unique-email='', type='tel', placeholder='Phone', ng-model='phone')
+            span.ion-iphone.form-control-feedback
           .form-group.has-feedback(ng-class='{ "has-error" : signupForm.password.$invalid && signupForm.password.$dirty }')
             input.form-control.input-lg(password-strength='', type='password', name='password', ng-model='password', placeholder='Password', required='')
             span.ion-key.form-control-feedback
