--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -60,6 +60,7 @@ $color_pink_swan_approx: #bbb;
 $color_cinnabar_approx: #e74c3c;
 
 @import 'bootstrap/bootstrap';
+@import url(http://fonts.googleapis.com/css?family=Vollkorn:700);
 
 
 body {
@@ -309,6 +310,37 @@ body > .right {
     font-size: 28px;
     line-height: 30px;
     height: 65px;
+    .stamp{
+      font-family: 'Vollkorn',serif;
+      font-size: 13px;
+      line-height: 20px;
+      text-transform: uppercase;
+      font-weight: 700;
+      color: red;
+      border: 4px solid red;
+      float: right;
+      padding: 0 7px;
+      border-radius: 6px;
+      opacity: .7;
+      -webkit-transform: rotate(16deg);
+      -o-transform: rotate(16deg);
+      -moz-transform: rotate(16deg);
+      -ms-transform: rotate(16deg);
+      position:absolute;
+      top: 14%;
+      left: 276px;
+    }
+    .stamp::after {
+      position: absolute;
+      content: " ";
+      width: 100%;
+      height: auto;
+      min-height: 100%;
+      top: -12px;
+      left: -12px;
+      padding: 21px 76px;
+      background: url(../images/noise.png) repeat;
+    }
 }
 
 ul.navbar-nav {
